## $Id$

if ENABLE_PHP
  OWNET_SUBDIRPHP = php
endif

if ENABLE_PYTHON
  OWNET_SUBDIRPYTHON = python
endif

if ENABLE_PERL
  OWNET_SUBDIRPERL = perl5
endif

if ENABLE_OWNETLIB
  OWNET_SUBDIROWNETLIB = c
endif

SUBDIRS = $(OWNET_SUBDIROWNETLIB) $(OWNET_SUBDIRPHP) $(OWNET_SUBDIRPYTHON) $(OWNET_SUBDIRPERL)

clean-generic:

	@RM@ -f *~ .*~
