if ENABLE_OWPHP
if ENABLE_PHP
  OWNET_SUBDIRPHP = php
endif
endif

if ENABLE_OWPYTHON
if ENABLE_PYTHON
  OWNET_SUBDIRPYTHON = python
endif
endif

if ENABLE_OWPERL
if ENABLE_PERL
  OWNET_SUBDIRPERL = perl5
endif
endif

if ENABLE_OWNETLIB
  OWNET_SUBDIROWNETLIB = c
endif

SUBDIRS = $(OWNET_SUBDIROWNETLIB) $(OWNET_SUBDIRPHP) $(OWNET_SUBDIRPYTHON) $(OWNET_SUBDIRPERL)

