
EXTRA_DIST = ow.i

if ENABLE_OWPERL
  SWIG_SUBDIRPERL = perl5
endif

if ENABLE_OWPYTHON
  SWIG_SUBDIRPYTHON = python
endif

if ENABLE_OWTCL
  SWIG_SUBDIRTCL = tcl
endif

if ENABLE_OWPHP
  SWIG_SUBDIRPHP = php
endif

SUBDIRS = $(SWIG_SUBDIRPERL) $(SWIG_SUBDIRPYTHON) $(SWIG_SUBDIRTCL) $(SWIG_SUBDIRPHP)

clean-generic:

	@RM@ -f *~ .*~
