# $Id$

bin_PROGRAMS = owfs
owfs_SOURCES = owfs.c ow_fs_callback.c

CFLAGS = -I../include \
         -fexceptions \
         -Wall \
         -W \
         -Wundef \
         -Wshadow \
         -Wpointer-arith \
         -Wcast-qual \
         -Wcast-align \
         -Wconversion \
         -Wstrict-prototypes \
         -Wredundant-decls \
         -Wunreachable-code
                        
clean-generic:

	rm -f *~ .*~
