SUBDIRS = c include

# don't want to add the example as a subdirectory right now...
EXTRA_DIST = example++/owcapiexample.cpp example++/Makefile.example example++/Makefile example++/Makefile.in example/owcapiexample.c example/Makefile.example example/Makefile example/Makefile.in

clean-generic:

	@RM@ -f *~ .*~

